--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "jest": "^27.2.5"
   },
   "dependencies": {
-    "eslint-config-prettier": "^8.3.0"
+    "eslint-config-prettier": "^8.3.0",
+    "figlet-cli": "^0.1.1"
   },
   "babel": {
     "env": {
